fixed card propos

--- a/pages/propos.html
+++ b/pages/propos.html
@@ -133,7 +133,7 @@
           <p>+</p>
           <p><span>2M d'euros</span> d'aide de BPIfrance</p>
         </div>
-        <div class="mx-auto col-lg-3 bg-light py-3 rounded">
+        <div class="mx-auto col-lg-3  py-3 rounded">
           <img class="p-3 mt-lg-5" src="../media/svg/Vector-1.svg" alt="piggy bank" />
           <p><span class="text-brand-ternary fw-bolder">10m+</span> d'euros de capital généré</p>
         </div>
