--- a/index.html
+++ b/index.html
@@ -145,26 +145,36 @@
           </p>
         </div>
         <div
-          class="row position-relative p-2 d-lg-none"
-          data-aos="fade-up"
-          data-aos-offset="200"
-          data-aos-delay="550"
-          data-aos-duration="1000"
-        >
-          <img src="../media/map.png" class="img-fluid opacity-75 p-0 rounded" alt="Carte interactive" />
-          <div class="position-absolute h-100 w-100 d-flex justify-content-center align-items-center">
-            <p class="text-light map-border fw-bold bg-dark bg-opacity-75 p-5">Appuyez pour ouvrir</p>
-          </div>
+        class="row position-relative p-2 d-lg-none"
+        data-aos="fade-up"
+        data-aos-offset="200"
+        data-aos-delay="550"
+        data-aos-duration="1000"
+      >
+        <img src="../media/map.png" class="img-fluid opacity-75 p-0 rounded" alt="Carte interactive" />
+        <div class="position-absolute h-100 w-100 d-flex justify-content-center align-items-center">
+          <a href="../pages/map.html"
+            ><p class="text-light map-border fw-bold bg-dark bg-opacity-75 p-5">Appuyez pour ouvrir</p></a
+          >
         </div>
-        <div id="map" style="height: 85vh">
-          <a href="https://www.maptiler.com" style="position: flex"
-            ><img src="https://api.maptiler.com/resources/logo.svg" alt="MapTiler logo"
-          /></a>
-        </div>
+      </div>
+        <div
+        id="map"
+        style="height: 85vh"
+        class="d-none d-lg-block"
+        data-aos="fade-up"
+        data-aos-offset="200"
+        data-aos-delay="550"
+        data-aos-duration="1000"
+      >
+        <a href="https://www.maptiler.com" style="position: flex"
+          ><img src="https://api.maptiler.com/resources/logo.svg" alt="MapTiler logo"
+        /></a>
         <p>
           <a href="https://www.maptiler.com/copyright/" target="_blank">&copy; MapTiler</a>
           <a href="https://www.openstreetmap.org/copyright" target="_blank">&copy; OpenStreetMap contributors</a>
         </p>
+      </div>
         
         </div>
       </section>
