webpack + page titles

--- a/pages/contact_ent_form.html
+++ b/pages/contact_ent_form.html
@@ -31,7 +31,7 @@
     <script defer src="../dist/main.bundle.js"></script>
     <script src="https://unpkg.com/just-validate@latest/dist/just-validate.production.min.js"></script>
 
-    <title>Page d'accueil</title>
+    <title>form entreprise</title>
   </head>
   <body>
     <!--Start de la main page -->
