--- a/pages/contact_syn_form.html
+++ b/pages/contact_syn_form.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta content="IE=edge" http-equiv="X-UA-Compatible" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+    <meta name="description" content="sydnicat: Contacter la société Sunpower">
+    <meta name="author" content="diginamic">
+
 
     <!-- bootstrap -->
 
