--- a/pages/propos.html
+++ b/pages/propos.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="À propos de la société Sunpower">
+    <meta name="author" content="diginamic">
 
     <!-- bootstrap -->
 
